# GTWMES

./: .deepsource.toml  323d7c3fe3ed141225b1846da88ba2b9d587165ab60ac6965ff316d4203f0140-certificate.pem.crt  323d7c3fe3ed141225b1846da88ba2b9d587165ab60ac6965ff316d4203f0140-private.pem.key  323d7c3fe3ed141225b1846da88ba2b9d587165ab60ac6965ff316d4203f0140-public.pem.key  connect.py  main.py  publish.py  publish_subscriber.py  publish_subscriber_GTW.py  publish_subscriber_MES.py  pyproject.toml  readme.md  requirements.txt  subscribe.py
.github/workflows/: pylint.yml
app/: .env_example  .gitignore  main.py  main_teste_PLC.py  run_main.bat  variables_example.py
app/MQTT/: mqtt_client_manager.py  mqtt_heart_beat.py  mqtt_message_handler.py  mqtt_message_processor.py  protocol.py
app/api/: connect.py  publishSubscriberMES.py
app/config/: create_thing.py
app/database/: config.py  connectDB.py
app/docs/: db_script.sql
app/exception/: Exception.py
app/model/: active_time.py  active_time_record.py  alarm.py  alarm_record.py  counter_record.py  counting_equipment.py  equipment.py  equipment_output.py  equipment_variables.py  production_order.py  variable.py
app/mqtt_communication/: mqtt_client_manager.py  mqtt_heart_beat.py  mqtt_message_handler.py  mqtt_message_processor.py  protocol.py
app/service/: active_time_record_service.py  active_time_service.py  alarm_record_service.py  alarm_service.py  configuration.py  configuration_handler_service.py  configuration_service.py  (+22 more)
db/: config.py  db_script.sql
message/: messages_GTW.json  messages_MESCLOUD.json
(+62 files in other folders)
